unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>デモ作成日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteBeginDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteBillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteEndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotePaymentMode__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuotePaymentTime__c</fullName>
        <label>Payment Terms</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteVersion__c</fullName>
        <label>Quote Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>x01</fullName>
        <filterScope>Everything</filterScope>
        <label>01. すべての商談</label>
    </listViews>
    <listViews>
        <fullName>x02</fullName>
        <filterScope>Mine</filterScope>
        <label>02. 私の商談</label>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>03. 今週登録分</label>
    </listViews>
    <listViews>
        <fullName>x05</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>05. 成立商談</label>
    </listViews>
    <listViews>
        <fullName>x07</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>07. 今月完了分</label>
    </listViews>
    <listViews>
        <fullName>x08</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>08. 来月完了分</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>